[workspace]
resolver = "2"
members = [
    "crates/wasm-harness",
    "crates/example",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sinui0/wasm-harness"

[workspace.dependencies]
criterion = { version = "0.5", default-features = false }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
