[package]
name = "example"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bench]]
name = "fib"
path = "benches/fib.rs"
harness = false

[[test]]
name = "smoke"
path = "tests/smoke.rs"

[features]
# Enables the threading test in tests/smoke.rs. Only safe on
# `wasm32-wasip1-threads`; the plain wasip1 target lacks real threading.
threads = []
# Enables the rayon-based parallel bench. Only useful on a threaded target.
rayon = ["dep:rayon"]

[dependencies]
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { workspace = true }
