[package]
name = "wasm-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark and test WebAssembly in browser JavaScript engines (V8, SpiderMonkey)."

[[bin]]
name = "wasm-harness"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
