[package]
name = "wasm-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark and test WebAssembly under wasmtime or browser JavaScript engines (V8, SpiderMonkey)."
readme = "../../README.md"
keywords = ["wasm", "webassembly", "benchmark", "wasi", "wasmtime"]
categories = ["development-tools::cargo-plugins", "development-tools::testing", "wasm"]

[[bin]]
name = "wasm-harness"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
